[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "tjdgusf",email = "tjdgusf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)"
]
[tool.black]
line-lenath = 120
[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["성현님 <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.2"

[tool.ruff]
target-version="py313"
